--- a/src/style.css
+++ b/src/style.css
@@ -8,18 +8,21 @@
 
 body {
     font-family: 'Ubuntu', sans-serif;
+    height:100vh;
+    
 }
 
 
 
 .header {
     position: relative;
+    width: 100%;
 }
 
 
 .Group-4 {
-    width: 1440px;
-    height: 208px;
+    width: 100%;
+    height: 180px;
     object-fit: contain;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.08);
 }
@@ -39,7 +42,7 @@ body {
 .Rectangle1 {
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 380px;
     background-color: #212121;
 }
 
@@ -166,6 +169,7 @@ body {
 }
 
 .menu-container {
+    height: 160px;
     position: absolute;
     top: 50%;
     left: 40%;
@@ -189,7 +193,7 @@ body {
 }
 
 .burger img {
-    width: 154px;
+    width: 300px;          /*  changed burger size from 154  */
     height: auto;
 }
 
